# tree-sitter-qc

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-qc.pc.in
bindings/c/tree_sitter/: tree-sitter-qc.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_qc/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterQCTests/: TreeSitterQCTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
