[package]
name = "tree-sitter-qc"
description = "The instructions language for QCSim"
version = "0.2.0"
authors = ["noClaps <contact@zerolimits.dev>"]
license = "0BSD"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "qc"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/qcsim/tree-sitter-qc"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
