[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-qc"
description = "The instructions language for QCSim"
version = "0.2.0"
keywords = ["incremental", "parsing", "tree-sitter", "qc"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "noClaps", email = "contact@zerolimits.dev" }]
requires-python = ">=3.10"
license.text = "0BSD"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/qcsim/tree-sitter-qc"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
